manifests/wordpress/wp-zobsai/wordpress-path-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wordpress-rewrite-resources
  namespace: wordpress
spec:
  replacePathRegex:
    regex: "^/resources(.*)"
    replacement: "$1"
