manifests/wordpress/wp-zobsai/ingress-resources-zobsai.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-zobsai-resources
  namespace: wordpress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zobsai.com
      secretName: zobsai-main-tls
  rules:
    - host: zobsai.com
      http:
        paths:
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: wp-zobsai-wordpress
                port:
                  number: 80
