manifests/wordpress/wp-zobsai/wp-zobsai-argocd.yaml
# -------------------------------
# Middleware to strip /resources from public site
# -------------------------------
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wordpress-resources-rewrite
  namespace: wordpress
spec:
  redirectRegex:
    regex: ^/resources/(.*)
    replacement: /$1
    permanent: true

---
# -------------------------------
# Middleware to rewrite /wp-login.php for admin subdomain
# -------------------------------
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: blog-rewrite
  namespace: wordpress
spec:
  redirectRegex:
    regex: ^/wp-login.php/(.*)
    replacement: /resources/wp-login.php/$1
    permanent: false

---
# -------------------------------
# Public site ingress for Zobsai WordPress
# -------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-public-blog
  namespace: wordpress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: wordpress-resources-rewrite@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: zobsai.com
      http:
        paths:
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: wp-zobsai-wordpress
                port:
                  number: 80
  tls:
    - hosts:
        - zobsai.com
      secretName: zobsai-tls

---
# -------------------------------
# Admin subdomain ingress for Zobsai WordPress
# -------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-admin-subdomain
  namespace: wordpress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: blog-rewrite@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: blog.zobsai.com
      http:
        paths:
          - path: /wp-login.php
            pathType: Prefix
            backend:
              service:
                name: wp-zobsai-wordpress
                port:
                  number: 80
  tls:
    - hosts:
        - blog.zobsai.com
      secretName: wp-zobsai-blog-tls
